<?xml version="1.0"?>
<package format="2">

  <name>mrs_visitor</name>
  <version>0.0.0</version>

  <description>
    ROS node with an action server, that takes mrs_msgs/Reference and flies the UAV there while avoiding obstacles.
    The feedback includes the current distance to the reference.
  </description>

  <author email="vladogim97@gmail.com">elumixor</author>
  <maintainer email="vladogim97@gmail.com">elumixor</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>actionlib_msgs</depend>
  <depend>mavros_msgs</depend>

</package>